<resources>
    <string name="app_name" translatable="false">Hiragana Randomizer</string>

    <!-- Toolbar title string -->
    <string name="settings_toolbar_title">Settings</string>

    <!-- Content description strings -->
    <string name="content_description_app_settings">App settings</string>
    <string name="content_description_start_button">Start game</string>
    <string name="content_description_exit_game">Exit game</string>
    <string name="content_description_pause_game">Pause game</string>
    <string name="content_description_verify_answer">Verify answer</string>
    <string name="content_description_home">Home screen</string>
    <string name="content_description_play_again">Play again</string>
    <string name="content_description_share">Share score</string>

    <!-- Welcome screen strings -->
    <string name="welcome_message">Ready to associate the Hiragana symbols with their Romanizations?</string>
    <string name="default_difficulty_selected">On %s difficulty!</string>
    <string name="difficulty_beginner">Beginner</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="start">Start</string>

    <!-- Main screen strings -->
    <string name="prompt_message">This symbol corresponds to which Hepburn Rōmaji?</string>
    <string name="score">Score: %d</string>

    <!-- Result screen strings -->
    <string name="you_made_it">You made it!</string>
    <string name="you_got_one_symbol_correctly">You got %d symbol correctly!</string>
    <string name="you_got_symbols_correctly">You got %d symbols correctly!</string>
    <string name="you_got_all_symbols_correctly">You got all symbols correctly! Congratulations!</string>
    <string name="perfect_scores">Perfect scores</string>
    <string name="difficulty">Game difficulty</string>

    <!-- Settings screen strings -->
    <string name="preference_category_title_training_reminder">Training reminder</string>
    <string name="preference_category_title_game_options">Game options</string>
    <string name="preference_category_title_sounds">Sounds</string>
    <string name="preference_category_title_theme">Theme</string>
    <string name="preference_category_title_about">About</string>
    <string name="preference_title_training_reminder_unchecked">Remind me to train later</string>
    <string name="preference_title_training_reminder_checked">Disable training reminder</string>
    <string name="preference_title_default_difficulty">Default difficulty</string>
    <string name="preference_title_clear_perfect_scores">Clear perfect scores</string>
    <string name="preference_title_sound_effects">Sound effects</string>
    <string name="preference_title_syllabary_sounds">Syllabary sounds</string>
    <string name="preference_title_theme">Theme</string>
    <string name="preference_title_version">Version</string>
    <string name="preference_summary_training_reminder_activated">Reminder configured for %s</string>
    <string name="preference_summary_clear_perfect_scores">Perfect scores achieved: %d</string>
    <string name="preference_summary_theme">Set app\'s theme</string>

    <!-- Training reminder strings -->
    <string name="training_reminder_content_title">Time to train your Hiragana!</string>
    <string name="training_reminder_content_text">Tap here to start training.</string>
    <string name="training_reminder_channel_name">Hiragana Learner training reminder</string>
    <string name="training_reminder_channel_description">Hiragana Training Reminder</string>

    <!-- Default difficulty dialog strings -->
    <string name="difficulty_entry_default">Choose before starting the game</string>

    <!-- Grant notification permission dialog strings -->
    <string name="post_notifications_dialog_title">Grant permission</string>
    <string name="post_notifications_dialog_message">In order to receive training reminders, we need to be able to send notifications.</string>
    <string name="post_notifications_dialog_button_text">OK</string>

    <!-- Grant notification permission manually dialog strings -->
    <string name="post_notification_manually_dialog_message">To enable this feature, you need to grant notifications permission in your device settings.</string>

    <!-- Clear perfect scores dialog strings -->
    <string name="clear_perfect_scores_dialog_title">Are you sure?</string>
    <string name="clear_perfect_scores_dialog_message">This action cannot be undone.</string>
    <string name="clear_perfect_scores_dialog_positive_button_text">Clear</string>

    <!-- App theme dialog strings -->
    <string name="app_theme_dialog_option_follow_system">Follow System\'s settings</string>
    <string name="app_theme_dialog_option_dark_theme">Dark theme</string>
    <string name="app_theme_dialog_option_light_theme">Light theme</string>

    <!-- Correct answer dialog strings -->
    <string name="alert_dialog_correct_answer_title">Correct Answer!</string>
    <string name="alert_dialog_correct_answer_message">Well Done! Keep practicing!</string>

    <!-- Incorrect answer dialog strings -->
    <string name="alert_dialog_wrong_answer_title">Wrong Answer!</string>
    <string name="alert_dialog_wrong_answer_message">The correct rōmaji for that symbol was: \"%1$s\". Keep Practicing!</string>

    <!-- Time's over dialog strings -->
    <string name="alert_dialog_time_over_title">Time\'s over!</string>

    <!-- Game paused dialog strings -->
    <string name="alert_dialog_game_paused_title">Game Paused</string>
    <string name="alert_dialog_game_paused_message">The game is currently paused.</string>

    <!-- Exit game dialog strings -->
    <string name="alert_dialog_exit_game_title">Exit game</string>
    <string name="alert_dialog_exit_game_message">Are you sure? Your progress will be lost!</string>

    <!-- Common dialog title strings -->
    <string name="alert_dialog_title_select_an_option_below">Choose an option below:</string>

    <!-- Common dialog button strings -->
    <string name="alert_dialog_continue_button_text">Continue</string>
    <string name="alert_dialog_cancel_button_text">Cancel</string>
    <string name="alert_dialog_exit_button_text">Exit</string>

    <!-- Message strings -->
    <string name="training_reminder_set_message">Reminder set</string>
    <string name="training_reminder_invalid_time_message">Please select a time later than the current\'s time.</string>

    <!-- Share final score strings -->
    <string name="share_final_score">I got %d out of 46 symbols on the Hiragana Learner Randomizer app. Can you beat my score?</string>
    <string name="share_perfect_final_score">I just got a perfect score on the Hiragana Learner Randomizer App! Can you repeat my feat?</string>

    <!-- Share score panel title string -->
    <string name="share_score_panel_title">Share your game score!</string>

</resources>